split album and album view factories